fix uneven spacing on hero text

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
 .left-hero {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     gap: 10px;
 }
 
@@ -55,6 +56,7 @@ a {
     padding: 0;
     margin: 0;
     margin-right: 30px;
+    margin-bottom: 10px;
     font-family:'roboto';
 }
 
